2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/sendbackup-gnutar.c (end_backup): Write warning message
	  in not fatal error.
	* server-src/dumper.c (process_dumpline): Parse warning message.
	* server-src/reporter.c (handle_strange): Print warning message in
	  the STRANGE summary.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driverio.c (free_serial): Set stable[s].dp to NULL.
	* server-src/driverio.c (disk2serial): Check that stable[s].dp == NULL.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Joe Rhett <jrhett@isite.net>

	* common-src/alloc.c (safe_env): Keep SYSTEMROOT if __CYGWIN__.

2004-08-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

        * client-src/amqde.c: Change snprintf for ap_snprintf.

2004-06-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* Amanda 2.4.4p3 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.4.4p3).
	* News: Changes in release 2.4.4p3.

2004-05-10  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/planner.c: Log L_DISK for autoflush disk.

2004-04-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/amanda.h: #include "amanda-int.h" only if !CONFIGURE_TEST.

2004-04-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* config/acinclude.m4i (AX_CREATE_STDINT_H) : New macro.
	* configure.in: Use AX_CREATE_STDINT_H(common-src/amanda-int.h).
	* common-src/amanda.h: include "common-src/amanda-int.h".
	* changer-src/scsi-cam.c: Change u_int32_t for uint32_t.
	* client-src/amandad-krb4.c: Change u_int32_t for uint32_t.
	* common-src/krb4-security.c: Change u_int32_t for uint32_t.
	* common-src/krb4-security.h: Change u_int32_t for uint32_t.
	* common-src/protocol.h: Change u_int32_t for uint32_t.
	* common-src/security.c: Change u_int32_t for uint32_t.

2004-04-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>
